[package]
name = "zo-abi"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "01.xyz anchor program interface"
homepage = "https://github.com/01protocol/zo-abi"
repository = "https://github.com/01protocol/zo-abi"
documentation = "https://docs.rs/zo-abi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.20.1"
solana-program = "1"
bytemuck = "1"
fixed = "1.9"
