[package]
name = "zo-abi"
version = "0.3.0"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "01.xyz anchor program interface"
homepage = "https://github.com/01protocol/zo-abi"
repository = "https://github.com/01protocol/zo-abi"
documentation = "https://docs.rs/zo-abi"

[features]
devnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.20.1"
solana-program = "1"
bytemuck = "1"
fixed = "=1.9.0"
common = { path = "../../common", optional = true}