[package]
name = "zo-abi"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "01.xyz anchor program interface"
homepage = "https://github.com/01protocol/zo-abi"
repository = "https://github.com/01protocol/zo-abi"
documentation = "https://docs.rs/zo-abi"

[features]
devnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.25.0"
solana-program = "1"
bytemuck = "1"
fixed = ">=1.8, <=1.11"
